workspace = { members = ["is_not_decreasing", "merge_two_linked_lists", "remove_dups_from_sorted_array", "simplify_path"] }
[package]
name = "leetcode-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
